--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <section class="bio">
                 <p>Hey there, I’m Patrick Hanus. Intros are always kind of rough so I’m going to try and sound as natural as possible. I built this website because my wife wanted me to get a job and stop “lying around."</p>
-                <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
+                <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
                 <p>Get in touch, shoot the breeze or send me spam at:<a href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
             </section>
 
