--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="style.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script type="application/ld+json">
+            {
+              "@context": "http://schema.org",
+              "@type": "Person",
+              "name": "Patrick Hanus",
+              "url": "http://patrickhanus.com",
+              "email": "hello@patrickhanus.com"
+              "logo": "http://patrickhanus.com/tile.png",
+              "sameAs": [
+                "https://github.com/theHsEdition",
+                "https://twitter.com/theHsEdition",
+                "https://www.linkedin.com/in/phanus",
+                "https://dribbble.com/thehsedition",
+                "https://vimeo.com/phanus",
+                "https://www.youtube.com/channel/UCe20ttCu0-xMuzfZB6hrQlw",
+                "https://www.instagram.com/thehsedition/",
+                "https://open.spotify.com/user/thehsedition"
+
+              ]
+            }
+        </script>
         <link href="https://fonts.googleapis.com/css?family=Passion+One:400|Roboto+Slab:300" rel="stylesheet">
     </head>
     <body>
