--- a/index.html
+++ b/index.html
@@ -1,113 +1,30 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Patrick Hanus | On the Web</title>
-        <meta name="description" content="The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Twitter Card -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@thehsedition">
-        <meta name="twitter:creator" content="@thehsedition">
-        <meta name="twitter:title" content="Patrick Hanus on the Web">
-        <meta name="twitter:description" content="The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *">
-        <meta name="twitter:image" content="http://patrickhanus.com/img/patrick-hanus-illustration.png">
-    <!-- OG Tags -->
-        <meta property="og:title" content="Patrick Hanus" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://patrickhanus.com" />
-        <meta property="og:image" content="http://patrickhanus.com/img/patrick-hanus-illustration.png" />
+---
+layout: default
+title: HQ
+---
+<header>
+    <h1>Patrick Hanus</h1>
+    <p>My online stuff, as it happens. (Not in real time.)</p>
+</header>
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="style.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script type="application/ld+json">
-            {
-              "@context": "http://schema.org",
-              "@type": "Person",
-              "name": "Patrick Hanus",
-              "url": "http://patrickhanus.com",
-              "email": "hello@patrickhanus.com"
-              "logo": "http://patrickhanus.com/tile.png",
-              "sameAs": [
-                "https://github.com/theHsEdition",
-                "https://twitter.com/theHsEdition",
-                "https://www.linkedin.com/in/phanus",
-                "https://dribbble.com/thehsedition",
-                "https://vimeo.com/phanus",
-                "https://www.youtube.com/channel/UCe20ttCu0-xMuzfZB6hrQlw",
-                "https://www.instagram.com/thehsedition/",
-                "https://open.spotify.com/user/thehsedition"
+<section class="profile-pic">
+    <img src="library/img/patrick-hanus-illustration.png" alt="Patrick Hanus is Attractive">
+</section>
 
-              ]
-            }
-        </script>
-        <link href="https://fonts.googleapis.com/css?family=Passion+One:400|Roboto+Slab:300" rel="stylesheet">
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+<section class="bio">
+    <p>Hey there, I’m Patrick Hanus. Intros are always kind of rough so I’m going to try and sound as natural as possible. I built this website because my wife wanted me to get a job and stop “lying around."</p>
+    <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
+    <p>Get in touch, shoot the breeze or send me spam at:<a href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
+</section>
 
-        <content class="clearfix">
-
-            <aside>
-                <a class="callout" href="https://paypal.me/PatrickHanus">Click Here to help me knock out my student debt!</a>
-            </aside>
-
-            <header>
-                <h1>Patrick Hanus</h1>
-                <p>My online stuff, as it happens. (Not in real time.)</p>
-            </header>
-            
-            <section class="profile-pic">
-                <img src="img/patrick-hanus-illustration.png" alt="Patrick Hanus is Attractive">
-            </section>
-
-            <section class="bio">
-                <p>Hey there, I’m Patrick Hanus. Intros are always kind of rough so I’m going to try and sound as natural as possible. I built this website because my wife wanted me to get a job and stop “lying around."</p>
-                <p>I love good design, I like learning new programs and trying to figure out what I’m doing wrong. <a href="http://skymousestudios.com">I started a company</a> with my best friend, because I want to help people kill their old websites and build better ones! I want to make enough money to write a television show that makes JJ Abrams jealous. (In a non-threatening way.)</p>
-                <p>Get in touch, shoot the breeze or send me spam at:<a href="mailto:hello@patrickhanus.com">hello@patrickhanus.com</a></p>
-            </section>
-
-            <section id="Social Media">
-                <ul>
-                    <li><i class="fa fa-vimeo" aria-hidden="true"></i>Watch videos and animations I've made on <a href="https://bit.ly/ph-vimeo">Vimeo.</a></li>
-                    <li><i class="fa fa-twitter" aria-hidden="true"></i>Read cool articles, funny thoughts and new projects on <a href="https://bit.ly/ph-twitter">Twitter</a></li>
-                    <li><i class="fa fa-github" aria-hidden="true"></i>Take a look at my code projects on <a href="https://bit.ly/ph-github">Github</a></li>
-                    <li><i class="fa fa-instagram" aria-hidden="true"></i>See pictures of real life and doodles for <a href="https://bit.ly/ph-insta">Instagram</a></li>
-                    <li><i class="fa fa-spotify" aria-hidden="true"></i>Listen to the latest playlist on <a href="https://bit.ly/ph-spotify">Spotify</a></li>
-                    <li><i class="fa fa-linkedin" aria-hidden="true"></i>Send me an awkward connection request on <a href="https://bit.ly/ph-LinkedIn">LinkedIn</a></li>
-                    <li><i class="fa fa-dribbble" aria-hidden="true"></i>Please invite me to upload work at <a href="https://bit.ly/ph-dribbble">Dribbble</a></li>
-                </ul>
-            </section>
-
-            <footer>
-                <p class="left">&copy;2017 Patrick Hanus Ltd.</p>
-                <p class="right">I&nbsp;&nbsp;&nbsp;<i class="fa fa-heart" aria-hidden="true"></i>You.</p>
-            </footer>
-
-        </content>
-        
-
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-96112016-1','auto');ga('send','pageview');
-        </script>
-    </body>
-</html>
+<section id="Social Media">
+    <ul>
+        <li><i class="fa fa-vimeo" aria-hidden="true"></i>Watch videos and animations I've made on <a href="https://bit.ly/ph-vimeo">Vimeo.</a></li>
+        <li><i class="fa fa-twitter" aria-hidden="true"></i>Read cool articles, funny thoughts and new projects on <a href="https://bit.ly/ph-twitter">Twitter</a></li>
+        <li><i class="fa fa-github" aria-hidden="true"></i>Take a look at my code projects on <a href="https://bit.ly/ph-github">Github</a></li>
+        <li><i class="fa fa-instagram" aria-hidden="true"></i>See pictures of real life and doodles for <a href="https://bit.ly/ph-insta">Instagram</a></li>
+        <li><i class="fa fa-spotify" aria-hidden="true"></i>Listen to the latest playlist on <a href="https://bit.ly/ph-spotify">Spotify</a></li>
+        <li><i class="fa fa-linkedin" aria-hidden="true"></i>Send me an awkward connection request on <a href="https://bit.ly/ph-LinkedIn">LinkedIn</a></li>
+        <li><i class="fa fa-dribbble" aria-hidden="true"></i>Please invite me to upload work at <a href="https://bit.ly/ph-dribbble">Dribbble</a></li>
+    </ul>
+</section>
