--- a/blog.html
+++ b/blog.html
@@ -6,21 +6,16 @@ subtitle: The Patrick Hanus Blog
 
 ---
 
-<!-- Loop through first 3 posts and show thumbnail for each -->
-<ul>
-  {% for post in site.posts limit:3 %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-  {% endfor %}
-</ul>
 
-<!-- Loop thought the rest of the posts and don't show thumbnails -->
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+<!-- Loop through first 3 posts and show thumbnail for each -->
+<section>
+  <ul>
+    {% for post in site.posts %}
+      <li>
+        <a href="{{ post.url }}"><h2>{{ post.title }}</h2></a>
+        {{ post.date }}
+        {{ post.excerpt }}
+      </li>
+    {% endfor %}
+  </ul>
+</section>
