--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 
-layout: default
-title: HQ
+layout: home
+title: Patrick Hanus | Designer & Developer
 permalink: /
+subtitle: My online stuff, as it happens. (Not in real time.)
 
 ---
