New pages and layout changes
- Added a Projects page
- Added a Lists page
- Changed the way blog posts show up
- Made edits to the about page
- Added new styles for page header image
- Added Styles for horizontal rules
- Changed nav button styles
- Added a new project file for RESOURCE
- Added font awesome support (Again)
- Added a new section at the bottom for social media

--- a/blog.html
+++ b/blog.html
@@ -2,20 +2,18 @@
 
 layout: page
 title: Thoughts, Comments & Concerns
-subtitle: The Patrick Hanus Blog
+subtitle: Because the World Needs Yet Another Blog
 
 ---
 
-
 <!-- Loop through first 3 posts and show thumbnail for each -->
-<section>
-  <ul>
+
+ 
     {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url }}"><h2>{{ post.title }}</h2></a>
-        {{ post.date }}
-        {{ post.excerpt }}
-      </li>
+		<section class="blog-card">
+		    <a href="{{ post.url }}"><h2>{{ post.title }}</h2></a>
+		    <i>{{ post.date  | date: "%m/%d/%Y" }}</i>
+		    {{ post.excerpt }}
+		</section>     
     {% endfor %}
-  </ul>
-</section>
+  
