--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -3,6 +3,7 @@
 layout: page
 title: Thoughts, Comments & Concerns
 subtitle: Because the World Needs Yet Another Blog
+permalink: /blog.html
 
 ---
 
