--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -3,6 +3,7 @@
 layout: page
 title: Projects
 subtitle: A Look at Stuff I've Started and Actually Finished (Coming Soon)
+permalink: /projects.html
 
 ---
 
