--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,4 +5,10 @@ title: Patrick Hanus | Designer & Developer
 permalink: /
 subtitle: My online stuff, as it happens. (Not in real time.)
 
+seo: Patrick Hanus | Designer & Developer
+excerpt: The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *
+img:
+
+hidden-message: Don't Give Up. Life Gets Better.
+
 ---
