--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -5,6 +5,12 @@ title: Projects
 subtitle: A Look at Stuff I've Started and Actually Finished (Coming Soon)
 permalink: /projects.html
 
+hidden-message: Don't Give Up. Life Gets Better.
+
+seo: A Collection of Patrick Hanus' Web and Design Projects
+excerpt: Things I've done and what I've learned along the way
+img:
+
 ---
 
 {% for project in site.projects %}
@@ -14,5 +20,6 @@ permalink: /projects.html
 	    		{{ project.name }}
 	    	</h2>
 	    </a>
+	    <p>{{ page.excerpt }}</p>
 	</section>     
 {% endfor %}
