--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -15,11 +15,14 @@ img:
 
 {% for project in site.projects %}
 	<section class="blog-card">
-	    <a href="{{ project.url }}">
-	    	<h2 itemprop="name">
-	    		{{ project.name }}
-	    	</h2>
-	    </a>
-	    <p>{{ page.excerpt }}</p>
+		<img src="{{ site.url }}/library/img/{{ project.img }}" alt="{{ project.name }}">
+	    <div>
+		    <a title="Go to {{ project.name }}" href="{{ project.url }}">
+		    	<h2 itemprop="name">
+		    		{{ project.name }}
+		    	</h2>
+		    </a>
+		    <p>{{ page.excerpt }}</p>	
+	    </div>
 	</section>     
 {% endfor %}
