--- a/_pages/index.html
+++ b/_pages/index.html
@@ -9,6 +9,6 @@ seo: Patrick Hanus | Designer & Developer
 excerpt: The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *
 img:
 
-hidden-message: Don't Give Up. Life Gets Better.
+hidden-message: This is a strip of color. Everyone is doing it.
 
 ---
