--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -16,7 +16,7 @@ img:
 {% for post in site.posts %}
 	<section class="blog-card">
 		<div class="blog-img">
-			<img src="{{ site.url }}/library/img/{{ post.img }}" alt="{{ post.title }}">
+			<img src="{{ site.baseurl }}/library/img/{{ post.img }}" alt="{{ post.title }}">
 		</div>
 		
 	   <div class="blog-title">
