--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -16,7 +16,7 @@ img:
 {% for project in site.projects %}
 	<section class="blog-card">
 		<div class="blog-img">
-			<img src="{{ site.url }}/library/img/{{ project.img }}" alt="{{ project.name }}">
+			<img src="{{ site.baseurl }}/library/img/{{ project.img }}" alt="{{ project.name }}">
 		</div>
 
 	    <div class="blog-title">
