--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -4,12 +4,11 @@ layout: page
 title: Thoughts, Comments & Concerns
 subtitle: Because the World Needs Yet Another Blog
 permalink: /blog.html
-
+img:
 hidden-message: My site doesn't have cookies. Sorry.
 
-seo: 
-excerpt: Thoughts, Comments and Concerns — Writing about marketing, design, code and getting things done in a world of distraction and crap. Also known as the blog of Patrick Hanus.
-img:
+seo-title: Thoughts, Comments and Concerns * The Patrick Hanus Blog
+seo-description: Writing about marketing, design, code and getting things done in a world of distraction and crap. Also known as the blog of Patrick Hanus.
 
 ---
  
