--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,14 +1,11 @@
 ---
 
 layout: home
-title: Patrick Hanus | Designer & Developer
-permalink: /
-subtitle: My online stuff, as it happens. (Not in real time.)
-
-seo: Patrick Hanus | Designer & Developer
-excerpt: The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *
-img:
-
+title: "Patrick Hanus | Designer & Developer"
+permalink: "/"
+subtitle: "My online stuff, as it happens. (Not in real time.)"
+seo-title: "Patrick Hanus | Designer & Developer"
+seo-description: "The online portfolio and resources to learn things about Patrick Hanus, if you should be so inclined to learn such things. * Please note this is an ever-evolving project. *"
 hidden-message: This is a strip of color. Everyone is doing it.
 
 ---
